Fixed overlaping in the progress bar

--- a/praxis-web/src/app/components/shared/initial-navbar/initial-navbar.component.css
+++ b/praxis-web/src/app/components/shared/initial-navbar/initial-navbar.component.css
@@ -1,5 +1,5 @@
 .navbar-custom {
-    background-color: #000000;
+    background-color: #47a3da;
 }
 
 img.logo {
